trying to solve bug with overlap

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -593,7 +593,6 @@ nav {
 
 	ul {
 		padding-bottom: 25px;
-		height: 100%;
 	}
 
 	.aboutCat {
